# Performance-Benchmarking-Systems-Lab

./: .gitignore  README.md  demo_packet.html  generate_visual_assets.py  package.json  pyproject.toml  run_bench.py  run_gpu_flow.ps1  simulation_results.csv  simulation_summary.html  simulation_summary.json  variant_search_report.html  variant_search_report.py
agentic_bench/: metrics.py  util.py  workload.py
apps/Codex-Agent-Monitor/: README.md  package.json
apps/Codex-Agent-Monitor/public/: app.js
apps/Codex-Agent-Monitor/scripts/: export-preview.mjs
apps/Codex-Agent-Monitor/src/: server.mjs
apps/speedtest-web/: README.md
benchmarks/agentic_cpu_bottleneck_bench/: README.md  bench.py
benchmarks/agentic_cpu_bottleneck_bench/agentic_bench/: sim.py
benchmarks/agentic_cpu_bottleneck_bench/docs/: Output.md  (+1 more)
benchmarks/reliable-gpu-kernel-bench/: demo.py  simulate_results.py  triton_adapter.py  triton_batch_runner.py
docs/: Output.md  gpu_run_checklist.html  migration-plan.md
docs/releases/: v1.0.0.md  v1.0.1.md  v1.0.2.md
public/: app.js  index.html  styles.css
reports/: simulation_results.csv
scripts/: build_windows_exe.ps1  capture_browser_screenshot.mjs  seed.mjs
src/: db.mjs  server.mjs
src/amd_apu_toolkit/: __init__.py  app_gui_entry.py  cli.py  cpu_tracer.py  gpu_tracer.py  opencl_probe.py  power.py  trace_capture.py  uma.py  web_server.py  web_snapshot.py  windows.py
static/: index.html
tests/: monitor.test.mjs
tools/amd-apu-toolkit/: pyproject.toml  server.py
workloads/: action_heavy.json  mixed.json  reasoning_heavy.json
(+19 files in other folders)
