[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "amd-apu-toolkit"
version = "1.0.1"
description = "Windows-first telemetry, tracing, and dashboards for AMD APU systems."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "OpenAI Codex" }]
dependencies = [
    "fastapi>=0.116.0",
    "matplotlib>=3.9.0",
    "pillow>=10.4.0",
    "rich>=13.7.0",
    "uvicorn>=0.35.0",
]

[project.scripts]
amd-apu-toolkit = "amd_apu_toolkit.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
amd_apu_toolkit = ["web/*.html", "web/static/*.css", "web/static/*.js"]
